# mgnipy

./: .buildinfo  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CNAME  CREDITS.md  Contributing.md  MGnify API (emgapi_v1).yaml  README.html  README.md  autogen.sh  autogen_clients.sh  config-v1.yaml  config-v2.yaml  developing.md  genindex.html  index.html  main.py  objects.inv  one_rebuild.sh  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  index.doctree
.doctrees/__intersphinx_cache__/: anndata_objects.inv
.doctrees/dev/: README_emgapi-v2-client.doctree  capabilities_demo.doctree  intro-openapi-python-client.doctree  quick-emgapi-v2-client.doctree  readme-openapi-python-client.doctree
.doctrees/reference/: mgnipy.V2.core.doctree  mgnipy.V2.custom_endpoint.doctree  mgnipy.V2.datasets.doctree  mgnipy.V2.datasets.taxonomic.doctree  mgnipy.V2.describe.doctree  mgnipy.V2.doctree  mgnipy.V2.endpoints.doctree  mgnipy.V2.mixins.doctree  mgnipy.V2.proxies.analyses.doctree  mgnipy.V2.proxies.assemblies.doctree  mgnipy.V2.proxies.biomes.doctree  mgnipy.V2.proxies.catalogues.doctree  mgnipy.V2.proxies.doctree  mgnipy.V2.proxies.genomes.doctree  mgnipy.V2.proxies.publications.doctree  mgnipy.V2.proxies.runs.doctree  mgnipy.V2.proxies.samples.doctree  mgnipy.V2.proxies.studies.doctree  mgnipy.V2.query_executor.doctree  mgnipy.V2.query_set.doctree  mgnipy.cli.doctree  mgnipy.doctree  mgnipy.emgapi_v2_client.api.analyses.analysis_get_mgnify_analysis_with_annotations.doctree  mgnipy.emgapi_v2_client.api.analyses.analysis_get_mgnify_analysis_with_annotations_of_type.doctree  mgnipy.emgapi_v2_client.api.analyses.doctree  mgnipy.emgapi_v2_client.api.analyses.get_mgnify_analysis.doctree  mgnipy.emgapi_v2_client.api.analyses.list_mgnify_analyses.doctree  mgnipy.emgapi_v2_client.api.assemblies.doctree  mgnipy.emgapi_v2_client.api.assemblies.get_assembly.doctree  mgnipy.emgapi_v2_client.api.assemblies.list_additional_contained_genomes_for_assembly.doctree  mgnipy.emgapi_v2_client.api.assemblies.list_analyses_for_assembly.doctree  mgnipy.emgapi_v2_client.api.assemblies.list_assemblies.doctree  mgnipy.emgapi_v2_client.api.assemblies.list_genome_links_for_assembly.doctree  mgnipy.emgapi_v2_client.api.authentication.doctree  mgnipy.emgapi_v2_client.api.authentication.token_obtain_sliding.doctree  mgnipy.emgapi_v2_client.api.authentication.token_refresh_sliding.doctree  mgnipy.emgapi_v2_client.api.authentication.token_verify.doctree  mgnipy.emgapi_v2_client.api.doctree  mgnipy.emgapi_v2_client.api.genomes.doctree  mgnipy.emgapi_v2_client.api.genomes.get_genome_annotations.doctree  (+140 more)
.github/workflows/: cicd.yml  gh-pages.yml
_downloads/0dc50a84ed2eaaa9fc4b240aed8344d8/: sphinx_build.sh
_downloads/bd5805a11887210568b15f0b7cb012db/: .readthedocs.yaml
_modules/: index.html
_modules/mgnipy/: cli.html  mgnipy.html
_sources/: index.md
_sources/dev/: README_emgapi-v2-client.md  quick-emgapi-v2-client.ipynb
_sources/reference/: mgnipy.V2.core.rst  mgnipy.V2.custom_endpoint.rst  mgnipy.V2.datasets.rst  mgnipy.V2.datasets.taxonomic.rst  mgnipy.V2.describe.rst  mgnipy.V2.endpoints.rst  mgnipy.V2.mixins.rst  mgnipy.V2.proxies.analyses.rst  mgnipy.V2.proxies.assemblies.rst  mgnipy.V2.proxies.biomes.rst  mgnipy.V2.proxies.catalogues.rst  mgnipy.V2.proxies.genomes.rst  mgnipy.V2.proxies.publications.rst  mgnipy.V2.proxies.rst  mgnipy.V2.proxies.runs.rst  (+166 more)
_static/: custom.css  documentation_options.js
dev/: README_emgapi-v2-client.html  capabilities_demo.html  intro-openapi-python-client.html  quick-emgapi-v2-client.html  readme-openapi-python-client.html
docs/: .gitignore  CNAME  IMPLEMENTATION_PLAN.md  MGnipy_Guide.md  PYPI_READINESS.md  README.md  conf.py  developing.md  index.md  sphinx_build.sh
mgnipy/: __init__.py  cli.py  mgnipy.py
openapi/: MGnify API (emgapi_v1).yaml  config-v1.yaml  config-v2.yaml  openapi_v2.json  preprocess_v2.py
reference/: mgnipy.V2.core.html  mgnipy.V2.custom_endpoint.html  mgnipy.V2.datasets.html  mgnipy.V2.datasets.taxonomic.html  mgnipy.V2.describe.html  mgnipy.V2.endpoints.html  mgnipy.V2.html  mgnipy.V2.mixins.html  mgnipy.V2.proxies.analyses.html  mgnipy.V2.proxies.assemblies.html  mgnipy.V2.proxies.biomes.html  mgnipy.V2.proxies.catalogues.html  mgnipy.V2.proxies.genomes.html  mgnipy.V2.proxies.html  mgnipy.V2.proxies.publications.html  mgnipy.V2.proxies.runs.html  mgnipy.V2.proxies.samples.html  mgnipy.V2.proxies.studies.html  mgnipy.V2.query_executor.html  mgnipy.V2.query_set.html  mgnipy.cli.html  mgnipy.emgapi_v2_client.api.analyses.analysis_get_mgnify_analysis_with_annotations.html  mgnipy.emgapi_v2_client.api.analyses.analysis_get_mgnify_analysis_with_annotations_of_type.html  mgnipy.emgapi_v2_client.api.analyses.get_mgnify_analysis.html  mgnipy.emgapi_v2_client.api.analyses.html  mgnipy.emgapi_v2_client.api.analyses.list_mgnify_analyses.html  mgnipy.emgapi_v2_client.api.assemblies.get_assembly.html  mgnipy.emgapi_v2_client.api.assemblies.html  mgnipy.emgapi_v2_client.api.assemblies.list_additional_contained_genomes_for_assembly.html  mgnipy.emgapi_v2_client.api.assemblies.list_analyses_for_assembly.html  mgnipy.emgapi_v2_client.api.assemblies.list_assemblies.html  mgnipy.emgapi_v2_client.api.assemblies.list_genome_links_for_assembly.html  mgnipy.emgapi_v2_client.api.authentication.html  mgnipy.emgapi_v2_client.api.authentication.token_obtain_sliding.html  mgnipy.emgapi_v2_client.api.authentication.token_refresh_sliding.html  mgnipy.emgapi_v2_client.api.authentication.token_verify.html  mgnipy.emgapi_v2_client.api.genomes.get_genome_annotations.html  mgnipy.emgapi_v2_client.api.genomes.get_genome_catalogue.html  mgnipy.emgapi_v2_client.api.genomes.get_genome_catalogue_genomes.html  mgnipy.emgapi_v2_client.api.genomes.get_mgnify_genome.html  (+140 more)
tests/: README.md  __init__.py  test_cli.py  test_config.py  test_constants.py  test_core_mgnifier.py  test_core_mgnifier.pyignoreme  test_datasets.py  test_helpers.py  test_public_api.py  test_results_handler.py  test_utils.py
(+1147 files in other folders)
